C-kubernetes常见应用安装/yaml/jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jenkins
    http:
      paths:
      - backend:
          serviceName: jenkins2
          servicePort: 80
